some css style fixes for nav. removed overflowx - impacting all elems. z-index changes so that elms stack correctley. X btn img not working on mobile menu. chnaged styles for cart menu on mobile.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,7 +26,7 @@ body,
 	font-family: "Bai Jamjuree", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans,
 		Droid Sans, Helvetica Neue, sans-serif;
 	box-sizing: border-box;
-	overflow-x: hidden; /* required for navbar toggle */
+	/* overflow-x: hidden; required for navbar toggle */
 }
 ::-webkit-scrollbar {
 	width: 0px;
@@ -68,30 +68,29 @@ a {
 	top: 0; /* Keep this line */
 	left: 0; /* Add this line */
 	right: 0; /* Add this line */
-	z-index: 1000; /* Keep this line to keep the header above other content */
-
+	z-index: 10; /* Keep this line to keep the header above other content */
 }
 
 .sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border: 0;
-  }
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap;
+	border: 0;
+}
 
 .mobile-nav-toggle {
-	display:none;
+	display: none;
 }
-.mobile-nav-toggle[aria-expanded="true"]{
-
+.mobile-nav-toggle[aria-expanded="true"] {
+	overflow: hidden;
 }
 .primary-navigation {
-	display:flex;
+	display: flex;
 	position: fixed;
 	top: 10px;
 	list-style: none;
@@ -100,12 +99,12 @@ a {
 	/* height: 100vh; */
 
 	background: hsla(0, 0%, 0%, 0.75);
-	z-index: 1001;
+	z-index: 11;
 }
 
-.primary-navigation a{
+/* .primary-navigation a{
 	text-decoration: none;
-}
+} */
 
 .primary-navigation[data-visible="true"] {
 	transform: translateX(0%);
@@ -119,17 +118,15 @@ a {
 	}
 } */
 
-@media (min-width:769px) {
+@media (min-width: 769px) {
 	.primary-navigation {
 		background: transparent;
 		padding-block: 0.5rem;
-		padding-inline: clamp(3rem,10vw, 10rem);
+		padding-inline: clamp(3rem, 10vw, 10rem);
 	}
-
 }
 
-
-@media (max-width: 768px){
+@media (max-width: 768px) {
 	.primary-navigation {
 		position: fixed;
 		inset: 0 0 0 0;
@@ -143,8 +140,8 @@ a {
 
 	.mobile-nav-toggle {
 		display: block;
-		position:fixed;
-		z-index:9999;
+		position: fixed;
+		z-index: 101;
 		background-image: url("../public/Hamburger_icon.png");
 		background-color: transparent;
 		background-repeat: no-repeat;
@@ -156,13 +153,13 @@ a {
 		top: 1.5rem;
 		left: 1.5rem;
 	}
-	.logo{
+	.logo {
 		width: 100%;
 	}
-	.mobile-nav-toggle[aria-expanded="true"]{
+	.mobile-nav-toggle[aria-expanded="true"] {
 		background-image: url("../public/close-button.png");
+		/* z-index: 121; */
 	}
-
 }
 
 .navbar-inner-cont {
@@ -236,8 +233,8 @@ span.text-red {
 	font-weight: 500;
 	font-size: 2.125rem;
 	display: flex;
-    justify-content: center;
-    align-items: center;
+	justify-content: center;
+	align-items: center;
 }
 .logo a {
 	font-family: "Poiret One", sans-serif;
@@ -250,6 +247,7 @@ span.text-red {
 	box-shadow: 0 1px 5px 0 rgba(31, 38, 135, 0.25);
 	right: 1rem;
 	position: fixed;
+	z-index: 100;
 }
 .cart-icon {
 	font-size: 2rem;
@@ -260,9 +258,9 @@ span.text-red {
 	border: none;
 	background-color: transparent;
 }
-.cart-icon:hover {
+/* .cart-icon:hover {
 	transform: scale(1.1, 1.1);
-}
+} */
 .cart-item-qty {
 	position: fixed;
 	right: 20px;
@@ -761,12 +759,12 @@ span.text-red {
 .product-container {
 	margin-top: 15px;
 	overflow: auto;
-	max-height: 70vh;
+	max-height: 60vh;
 	padding: 20px 10px;
 }
 .product {
 	display: flex;
-	gap: 30px;
+	gap: 45px;
 	padding: 20px;
 }
 .product .cart-product-image {
@@ -792,7 +790,7 @@ span.text-red {
 }
 .total {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 }
 .total h3 {
 	font-size: 22px;
@@ -1120,7 +1118,7 @@ span.text-red {
 		height: 350px;
 	}
 	.cart-container {
-		width: 415px;
+		width: 100%;
 		padding: 4px;
 	}
 	.cart-heading {
@@ -1205,74 +1203,74 @@ span.text-red {
 			width: 40px;
 			height: 40px;
 			position: relative;
-		  }
-		  
-		  .square {
+		}
+
+		.square {
 			width: 10px;
 			height: 10px;
 			background-color: var(--primary-color);
 			position: absolute;
-		  }
-		  
-		  .square:nth-child(1) {
-			top: 0;
-			left: 0;
-		  }
-		  
-		  .square:nth-child(2) {
-			top: 0;
-			left: 15px;
-		  }
-		  
-		  .square:nth-child(3) {
-			top: 0;
-			right: 0;
-		  }
-		  
-		  .square:nth-child(4) {
-			top: 15px;
-			left: 0;
-		  }
-		  
-		  .square:nth-child(5) {
-			top: 15px;
-			left: 15px;
-		  }
-		  
-		  .square:nth-child(6) {
-			top: 15px;
-			right: 0;
-		  }
-		  
-		  .square:nth-child(7) {
-			bottom: 0;
-			left: 0;
-		  }
-		  
-		  .square:nth-child(8) {
-			bottom: 0;
-			left: 15px;
-		  }
-		  
-		  .square:nth-child(9) {
-			bottom: 0;
-			right: 0;
-		  }
-  .mobile-form {
-    display: block;
-  }
-	body {
-    font-size: 14px;
-  }
+		}
 
-  h1 {
-    font-size: 2rem;
-  }
+		.square:nth-child(1) {
+			top: 0;
+			left: 0;
+		}
 
-  p {
-    font-size: 1rem;
-  }
-}
+		.square:nth-child(2) {
+			top: 0;
+			left: 15px;
+		}
+
+		.square:nth-child(3) {
+			top: 0;
+			right: 0;
+		}
+
+		.square:nth-child(4) {
+			top: 15px;
+			left: 0;
+		}
+
+		.square:nth-child(5) {
+			top: 15px;
+			left: 15px;
+		}
+
+		.square:nth-child(6) {
+			top: 15px;
+			right: 0;
+		}
+
+		.square:nth-child(7) {
+			bottom: 0;
+			left: 0;
+		}
+
+		.square:nth-child(8) {
+			bottom: 0;
+			left: 15px;
+		}
+
+		.square:nth-child(9) {
+			bottom: 0;
+			right: 0;
+		}
+		.mobile-form {
+			display: block;
+		}
+		body {
+			font-size: 14px;
+		}
+
+		h1 {
+			font-size: 2rem;
+		}
+
+		p {
+			font-size: 1rem;
+		}
+	}
 }
 
 @media (width > 650px) {
